# Ros2_C-_Construct_Ai

./: .gitignore  README.md
client_pkg/: CMakeLists.txt  package.xml
client_pkg/src/: service_client_v2.cpp  stop_client.cpp
custom_interfaces/: CMakeLists.txt  package.xml
executors_exercises_pkg/: CMakeLists.txt  package.xml
executors_exercises_pkg/src/: box_bot_manager.cpp  executor_example_1.cpp  executor_example_2.cpp  executor_example_4_singlethreaded.cpp  executor_example_5.cpp  executor_example_5_mutualyexclusive.cpp  executor_example_5_mutualyexclusive_multiple.cpp  executor_example_5_reentrant.cpp
exercise42_pkg/: CMakeLists.txt  package.xml
exercise42_pkg/src/: exercise42.cpp
logs_test/: CMakeLists.txt  package.xml
logs_test/launch/: logs_test.launch.py
logs_test/src/: logger_example.cpp
movement_pkg/: CMakeLists.txt
movement_pkg/src/: movement_server.cpp
my_action_client/: CMakeLists.txt
my_action_client/src/: action_client.cpp
my_action_server/: CMakeLists.txt
my_action_server/src/: action_server.cpp
services_quiz/: CMakeLists.txt  package.xml
services_quiz/src/: service_client.cpp  service_server.cpp
services_quiz_srv/: CMakeLists.txt  package.xml
t3_action_msg/: CMakeLists.txt  package.xml
topic_publisher_pkg/: CMakeLists.txt
topic_publisher_pkg/launch/: age_publisher.launch.py  move_robot.launch.py  simple_topic_publisher.launch.py
topic_publisher_pkg/src/: move_robot.cpp  publish_age.cpp  simple_topic_publisher_composable.cpp
topic_subscriber_pkg/: CMakeLists.txt  package.xml
topic_subscriber_pkg/launch/: simple_topic_subcriber.launch.py  sub_odam.launch.py
topic_subscriber_pkg/src/: simple_topic_subscriber.cpp  sub_odam.cpp
topics_quiz/: CMakeLists.txt  package.xml
topics_quiz/launch/: topics_quiz.launch.py
topics_quiz/src/: topics_quiz.cpp
